<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="190dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/tabung1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:gravity="center"
        android:paddingTop="15dp"
        android:text="@string/Luas_permukaan_tabung_tanpa_tutup"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Tinggi"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_tinggi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Masukan_Tinggi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Jari_jari"
            android:textSize="16dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/input_jarijari"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/Masukan_jari_jari" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="16dp">

        <Button
            android:id="@+id/btn_permukaan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:onClick="hitungluas"
            android:gravity="center"
            android:text="@string/Hitung" />
    </LinearLayout>

    <TextView
        android:id="@+id/text_luas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center" />

</LinearLayout>